--- a/API/package.json
+++ b/API/package.json
@@ -4,6 +4,10 @@
   "main": "app.js",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "nodemon app.js"
   }
 }
